fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1077,7 +1077,7 @@ a:hover, a:focus {
   font-size: 0.8em;
   width: 90%;
   max-width: 1140px;
-  margin: 0 auto 2.5em auto;
+  margin: 2em auto;
   text-align: center;
 }
 .badges-container h2 {
